--- a/templates/login.html
+++ b/templates/login.html
@@ -7,6 +7,9 @@
 <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@700;900&family=Inter:wght@400;600&display=swap" rel="stylesheet">
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
 
+<!-- ICONS -->
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
+
 <style>
 body {
     margin: 0;
@@ -74,10 +77,6 @@ body {
     margin-top: 5px;
 }
 
-.btn-login:hover {
-    background: linear-gradient(90deg, #ff3333, #cc0000);
-}
-
 .links {
     display: flex;
     justify-content: space-between;
@@ -89,10 +88,6 @@ body {
 .links a {
     color: #888;
     text-decoration: none;
-}
-
-.links a:hover {
-    color: #ff2b2b;
 }
 
 .divider {
@@ -128,6 +123,7 @@ body {
     border: 1px solid #1f1f1f;
     color: #aaa;
     transition: 0.2s;
+    font-size: 18px;
 }
 
 .social-btn:hover {
@@ -164,11 +160,11 @@ body {
 
     <div class="socials">
         <button class="social-btn" onclick="window.open('https://discord.gg/JjdDagrkvX', '_blank')">
-            Discord
+            <i class="fa-brands fa-discord"></i>
         </button>
 
         <button class="social-btn" onclick="window.open('https://guns.lol/shubh.', '_blank')">
-            guns.lol
+            <i class="fa-solid fa-gun"></i>
         </button>
     </div>
 
