--- a/templates/login.html
+++ b/templates/login.html
@@ -137,7 +137,7 @@ body {
 
 <div class="login-card">
 
-    <div class="logo">FR <span>Console</span></div>
+    <div class="logo">FR <span>CONSOLE</span></div>
     <div class="subtitle">Secure authentication required</div>
 
     <form method="POST">
