--- a/templates/index.html
+++ b/templates/index.html
@@ -147,7 +147,7 @@
     <form onsubmit="addUser(event)">
       <input required type="text" class="form-control mb-2" placeholder="Username" id="add_username">
       <input required type="password" class="form-control mb-2" placeholder="Password" id="add_password">
-      <input required type="date" class="form-control mb-2" id="add_expiry">
+      <input required type="datetime-local" class="form-control mb-2 white-datetime" id="add_expiry">
       <button class="btn btn-success">Add</button>
     </form>
   </div>
