--- a/templates/index.html
+++ b/templates/index.html
@@ -78,20 +78,28 @@
       box-shadow: 0 0 15px rgba(255,0,0,0.3);
     }
 
-    h4 {
-      font-size: 26px;
-      font-weight: 900;
-      color: #ff1a1a;
-      text-shadow: 0 0 10px red;
-    }
+   h4 {
+  font-size: 26px;
+  font-weight: 900;
+  color: #ff1a1a;
+  text-shadow: 0 0 10px red;
+}
 
-    .form-control, .form-select {
-      background: #111; border: 1px solid #444; color:white;
-    }
+.form-control, .form-select {
+  background: #111;
+  border: 1px solid #444;
+  color: white;
+}
 
-    .form-control:focus, .form-select:focus {
-      border-color: #ff1a1a; box-shadow: 0 0 10px red;
-    }
+.form-control::placeholder {
+  color: rgba(255,255,255,0.7);
+}
+
+.form-control:focus, .form-select:focus {
+  border-color: #ff1a1a;
+  box-shadow: 0 0 10px red;
+}
+
 
     table thead th { background:#151515; color:#ff1a1a; }
     table tbody td { background:#0d0d0d; color:white; }
