--- a/templates/index.html
+++ b/templates/index.html
@@ -99,6 +99,15 @@
   border-color: #ff1a1a;
   box-shadow: 0 0 10px red;
 }
+    input[type="datetime-local"] {
+  background: white !important;
+  color: black !important;
+}
+
+input[type="datetime-local"]::-webkit-calendar-picker-indicator {
+  filter: invert(0);
+}
+
 
 
     table thead th { background:#151515; color:#ff1a1a; }
